--- a/products.html
+++ b/products.html
@@ -13,14 +13,14 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./bootstrap_task1.html">HepsiOrada</a>
+            <a class="navbar-brand" href="./index.html">HepsiOrada</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" target="_self" href=" ./bootstrap_task1.html">Ana Sayfa</a>
+                    <a class="nav-link" target="_self" href=" ./index.html">Ana Sayfa</a>
                     <a class="nav-link active" target="_self" href="./products.html">Ürünler</a>
                     <a class="nav-link" target="_self" href="./info.html">Hakkımızda</a>
                 </div>
